[package]
name = "mirai-rt"
version = "0.1.0"
authors = ["Kaede Fujisaki <kaede@hexe.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0"
anyhow = "1.0.43"
futures = "0.3.17"
once_cell = "1.8.0"
